# stm32f3discovery

./: .gitignore  Cargo.toml  memory.x
.cargo/: config
src/: config.rs  main.rs
src/drivers/: mod.rs
src/mcu/: adc.rs  clocks.rs  flash.rs  gpio.rs  i2c.rs  mod.rs  rtc.rs  spi.rs  timer.rs  uart.rs  wdt.rs
