[package]
authors = ["Taylor Spencer"]
edition = "2018"
readme = "README.md"
name = "stm32f3discovery"
version = "0.0.0"

[dependencies]
cortex-m = "0.7.3"
cortex-m-rt = "0.7.1"
panic-halt = "0.2.0"

[dependencies.stm32f3]
version = "0.14.0"
features = ["stm32f303", "rt"]

# this lets you use `cargo fix`!
[[bin]]
name = "stm32f3discovery"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations